--- a/src/Components/AddChacter/Aside/Aside.css
+++ b/src/Components/AddChacter/Aside/Aside.css
@@ -11,3 +11,14 @@
   -o-border-radius: 50%;
   margin-right: 10px;
 }
+h4 i {
+  font-size: 10px;
+  padding: 3px;
+  margin: 6px;
+  color: #fff;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
