--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -29,12 +29,12 @@
   padding: 5px 0 5px 0;
 }
 .homeContentTitle span > span {
-  color: red;
+  color: #b42736;
   background: #000;
   padding: 5px;
 }
 .HomeBottom {
-  background: #b42736 !important;
+  background: #520f0eea !important;
   color: #fff;
   padding: 30px;
   border-radius: 20px;
